AP-18878: Fix broken Kerberos delegation unit tests (broken on Java 17)
Kerberos tests running on Java 17 failed due to:
- AddExports/Opens in MANIFEST.MF not working anymore
- Java 17 has deprecated support for weak encryption -> set allow_weak_crypt=true in krb5.conf

Both of these changes do not affect tests being run on Java 11.

AP-18878 (Kerberos constrained delegation fails on Java 17)