@@ -1,66 +1,55 @@
-<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.knime</groupId>
-		<artifactId>knime-kerberos</artifactId>
-		<version>${revision}${changelist}</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
+    <parent>
+        <groupId>org.knime</groupId>
+        <artifactId>knime-kerberos</artifactId>
+        <version>${revision}${changelist}</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
-  <artifactId>org.knime.kerberos.tests</artifactId>
-  <version>${revision}${changelist}</version>
-  <packaging>eclipse-test-plugin</packaging>
-  
+    <artifactId>org.knime.kerberos.tests</artifactId>
+    <version>${revision}${changelist}</version>
+    <packaging>eclipse-test-plugin</packaging>
+
     <properties>
         <revision>4.6.0</revision>
     </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-minikdc</artifactId>
-			<version>3.1.1</version>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.0.2</version>
-				<executions>
-					<execution>
-						<configuration>
-							<includeScope>runtime</includeScope>
-							<outputDirectory>libs</outputDirectory>
-							<excludeGroupIds>log4j,commons-io,org.slf4j,org.hamcrest,org.bouncycastle,junit</excludeGroupIds>
-						</configuration>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-                                <groupId>org.eclipse.tycho</groupId>
-                                <artifactId>target-platform-configuration</artifactId>
-                                <version>${tycho.version}</version>
-                                <configuration>
-                                        <dependency-resolution>
-                                                <extraRequirements>
-                                                        <requirement>
-                                                                <type>eclipse-feature</type>
-                                                                <id>org.knime.features.clfixes</id>
-                                                                <versionRange>0.0.0</versionRange>
-                                                        </requirement>
-                                                </extraRequirements>
-                                        </dependency-resolution>
-                                </configuration>
-                        </plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>target-platform-configuration</artifactId>
+                <version>${tycho.version}</version>
+                <configuration>
+                    <dependency-resolution>
+                        <extraRequirements>
+                            <requirement>
+                                <type>eclipse-feature</type>
+                                <id>org.knime.features.clfixes</id>
+                                <versionRange>0.0.0</versionRange>
+                            </requirement>
+                        </extraRequirements>
+                    </dependency-resolution>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <version>${tycho.version}</version>
+                <configuration>
+                    <argLine>
+                        --add-exports=java.security.jgss/sun.security.jgss=ALL-UNNAMED
+                        --add-exports=java.security.jgss/sun.security.jgss.spi=ALL-UNNAMED
+                        --add-opens=java.security.jgss/sun.security.jgss.krb5=ALL-UNNAMED
+                        --add-exports=java.security.jgss/sun.security.krb5.internal=ALL-UNNAMED
+                        --add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
